JumpScript/tests/baselines/reference/parser.numericSeparators.binaryNegative.errors.txt
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/1.jump(1,5): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.jump(1,3): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.jump(1,2): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.jump(1,3): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.jump(1,3): error TS2304: Cannot find name 'B0101'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.jump(1,6): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.jump(1,13): error TS6189: Multiple consecutive numeric separators are not permitted.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.jump(1,3): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.jump(1,4): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.jump(1,5): error TS6188: Numeric separators are not allowed here.


==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/1.jump (1 errors) ====
    0b00_
        ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.jump (1 errors) ====
    0b_110
      ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.jump (3 errors) ====
    0_B0101
     ~
!!! error TS6188: Numeric separators are not allowed here.
      ~~~~~
!!! error TS1005: ';' expected.
      ~~~~~
!!! error TS2304: Cannot find name 'B0101'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.jump (1 errors) ====
    0b01__11
         ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.jump (1 errors) ====
    0B0110_0110__
                ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.jump (3 errors) ====
    0b___0111010_0101_1
      ~
!!! error TS6188: Numeric separators are not allowed here.
       ~
!!! error TS6188: Numeric separators are not allowed here.
        ~
!!! error TS6188: Numeric separators are not allowed here.
    